# rebo

./: CHANGELOG.md  README.md
.github/workflows/: ci.yml
examples/: new.json  old.json  sample.md
my-lib/: .gitignore  README.md  pyproject.toml
my-lib/c-lib/: .gitignore  LICENSE  Makefile  README.md
my-lib/c-lib/.github/workflows/: ci.yml
my-lib/c-lib/src/: c_lib.c  c_lib.h
my-lib/js-lib/: LICENSE  README.md  package.json
my-lib/js-lib/.github/workflows/: ci.yml
my-lib/js-lib/src/: index.js
my-lib/js-lib/tests/: test.js
my-lib/src/my_lib/: __init__.py
src/rebo_toolkit.egg-info/: PKG-INFO
