[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my_lib"
version = "0.1.0"
description = "TODO: short description"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/your-id/my-lib"
Repository = "https://github.com/your-id/my-lib"

[tool.setuptools.packages.find]
where = ["src"]
